Fix broken CSS variable

--- a/app/assets/stylesheets/nucore.scss
+++ b/app/assets/stylesheets/nucore.scss
@@ -419,10 +419,10 @@ body {
 }
 .manage-mode {
   background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top, #ffffff 53%, $light-blue 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #ffffff 53%,$light-blue 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #ffffff 53%, $light-blue 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='$light-blue',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, #ffffff 53%, $lightBlue 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #ffffff 53%,$lightBlue 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #ffffff 53%, $lightBlue 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='$lightBlue',GradientType=0 ); /* IE6-9 */
 }
 html,body{
   min-height: 100%;
